完善frida download功能